# DoublePendulumFractal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: DoublePendulum.cpp  DoublePendulum.hpp  IntegratorBase.hpp  IntegratorEuler.cpp  IntegratorEuler.hpp  Simulation.cpp  Simulation.hpp  State.cpp  State.hpp
